--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/HarishDeivanayagam/habit-tracker.git",
   "name": "habit-tracker",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +16,8 @@
     "use-force-update": "^1.0.7"
   },
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
